kubernetes/test/app-test-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.5-alpine
          ports:
            - containerPort: 6379
