kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: leechee1/worker:latest
          imagePullPolicy: Always
          env:
            - name: REDIS_HOST
              value: "redis-test"
            - name: ENTRYPOINT
              value: "src/worker.py"
