kubernetes/test/app-test-ingress-flask.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jasonlee.coe332.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-api-service-test
                port:
                  number: 5000
