kubernetes/test/app-test-service-flask.yml
### app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service-test
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
