kubernetes/test/app-test-service-nodeport-flask.yml
### app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-nodeport-test
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30081
